--- a/day20171225.md
+++ b/day20171225.md
@@ -1,5 +1,4 @@
 # 感受
 常熟比赛完之后，有一个很强烈的感受，原来很多你以为理所当然的事情，其实并非那么简单，都是经过很多人很多年的努力得到。
-## 最小二乘法看似简单，理所当然；
-## 蒙特卡洛算法，理所当然；
-## 车队当前的组合方案，理所当然，看了别人的才知道，别人和你的都不一样，甚至天壤之别。
+- 最小二乘法看似简单，理所当然； 蒙特卡洛算法，理所当然； 车队当前的组合方案，理所当然；
+看了别人的才知道，别人和你的都不一样，甚至天壤之别。
