--- a/爬坑之路.md
+++ b/爬坑之路.md
@@ -1,13 +1,13 @@
-# ubuntu源更新有问题
-## 翻墙，换国内源，都不行的话，看一下哪里出错，可能是添加了arm64的东西，导致更新失败，TX2的锅
+## ubuntu源更新有问题
+翻墙，换国内源，都不行的话，看一下哪里出错，可能是添加了arm64的东西，导致更新失败，TX2的锅
 
-# 深度学习gpu配置
-## 先安gpu驱动
-### 1，图形化方式
-### 2，nvidia官网下载驱动 几十M一般
-### 3，添加英伟达的源，按驱动版本安装
+## 深度学习gpu配置
+### 先安gpu驱动
+1，图形化方式
+2，nvidia官网下载驱动 几十M一般
+3，添加英伟达的源，按驱动版本安装
 
-## 再安cuda
-### cuda注意版本7.5, 8.0， 9.0 
+### 再安cuda
+cuda注意版本7.5, 8.0， 9.0 
 
-## 再解压cudnn
+### 再解压cudnn
