--- a/爬坑之路.md
+++ b/爬坑之路.md
@@ -11,3 +11,9 @@
 cuda注意版本7.5, 8.0， 9.0 
 
 ### 再解压cudnn
+
+## ros安装失败
+1.Depends: ros-indigo-geometry-tutorials but it is not going to be installed ...
+使用sudo aptitude install ros-indigo-desktop
+
+参考：https://blog.csdn.net/u013832707/article/details/53534938
