--- a/爬坑之路.md
+++ b/爬坑之路.md
@@ -17,3 +17,6 @@ cuda注意版本7.5, 8.0， 9.0
 使用sudo aptitude install ros-indigo-desktop
 
 参考：https://blog.csdn.net/u013832707/article/details/53534938
+
+## kitti 多传感器标定
+http://www.cvlibs.net/software/calibration/
